crates/hdk/tests/macros/hdk_to_local_types_not_enum.rs

use hdk::prelude::holochain_deterministic_integrity::prelude::*;

#[hdk_to_local_types]
struct Foo;

fn main() {}
